# Adwaita-Framework

./: .gitignore  README.md  librsvg-pixbuf-loader.sh  meson.build  meson.options
.github/workflows/: build.yml
gir/: meson.build
scripts/: fix-gdk-pixbuf-rpath.sh  make-relocatable  post-install
subprojects/: adwaita-icon-theme.wrap  appstream.wrap  cairo.wrap  default-icon-theme.wrap  fribidi.wrap  gdk-pixbuf.wrap  glib.wrap  gobject-introspection.wrap  graphene.wrap  gtk.wrap  gtksourceview.wrap  harfbuzz.wrap  libadwaita.wrap  libdatrie.wrap  libfyaml.wrap  librsvg.wrap  libthai.wrap  libxml2.wrap  libxmlb.wrap  pango.wrap  proxy-libintl.wrap
subprojects/packagefiles/: appstream.patch  cairo-remove-fontconfig.patch  cairo.patch  gdk-pixbuf-typelib.patch  girepository-override-dependency.patch  github-com-tlwg-libthai-pull-30-meson.patch  graphene-typelib.patch  gtk-librsvg-fix.patch  gtk-typelib.patch  gtksourceview-no-fontconfig.patch  gtksourceview-typelib.patch  harfbuzz-typelib.patch  libadwaita-typelib.patch  libfyaml.patch  libxmlb-typelib.patch  pango-libthai.patch  pango-remove-fontconfig.patch  pango-typelib.patch
